--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,12 +1,3 @@
-/*@media screen and (min-width:993px) {
-  .offer{
-    padding: 10vh 0;
-    background: url(../assets/bg.jpeg);
-  }
-  .offer .container{
-    background:rgba(51, 53, 102,.5);
-  }
-}*/
 @media screen and (max-width:992px){
   h1{
     font-size: 55px;
@@ -51,9 +42,9 @@
     padding: 0;
     padding-top: 4em;
   }
-  /*header{
+  header{
     height: 80vh;
-  }*/
+  }
   .darklight{
     display: none;
   }
@@ -94,6 +85,9 @@
     display: block;
     width: 100%;
     padding: 0;
+  }
+  header{
+    height: 80vh;
   }
   .offer{
     line-height: 20px;
